* 2013-10-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 29529: Made 'validate_contact_email' setting available via 'io.ox/core//features/validateMailAddresses'

* 2013-10-28 - thorben.betten@open-xchange.com

 - Fix for bug 29498: Check for regal RFC 822 E-Mail address prior to applying preparations for MSISDN addresses

* 2013-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 29429: Use Java's naming for charset "cp932" that is "MS932"

* 2013-10-22 - thorben.betten@open-xchange.com

 - Fix for bug 29412: Escape HTML content prior to writing to output writer

* 2013-10-10 - martin.herfurth@open-xchange.com

 - Fix for bug 29315: Avoid bad where condition

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then

* 2013-10-01 - thorben.betten@open-xchange.com

 - Fix for bug 29092: Deal with possible 'FLD-0003' error when collecting file storage root folders

* 2013-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 29002: Keep proper emoji characters on reply/forward operation
 - Fix for bug 28933: Orderly pass empty content to message part

* 2013-09-19 - thorben.betten@open-xchange.com

 - Fix for bug 28932: Deal with possible 'NumberFormatException' gracefully
 - Fix for bug 28935: Added null guard when checking which sender source to choose
 - Fix for bug 28949: Keep protocol/scheme part in deferred URL's redirect value

* 2013-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 28921: Cope with empty setting for "MAX_UPLOAD_SIZE" property
 - Fix for bug 28913: Keep meta information after sanitizing of Apple-generated messages

* 2013-09-17 - thorben.betten@open-xchange.com

 - Fix for bug 28885: Null guard for possibly absent confirm status
 - Fix for bug 28883: Deal with (temporary) absent Hazelcast service
 - Fix for bug 28882: Improved handling for bad configured "MAX_UPLOAD_SIZE" property in 'server.properties'